--- a/end.html
+++ b/end.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="icon" href="css/images.png">
+    <link rel="icon" href="css/images.png" />
     <title>Quick Quizz - End</title>
   </head>
   <body>
